--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -1,39 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <title></title>
+    <title>greegko.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <link rel="manifest" href="/app.webmanifest" />
-    <link rel="apple-touch-icon" href="/icon-192.png" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&amp;subset=latin-ext" rel="stylesheet" />
-    <style>
-      html,
-      body,
-      #root {
-        height: 100%;
-        margin: 0px;
-        padding: 0px;
-      }
-    </style>
-    <script type="text/javascript">
-      // https://github.com/rafgraph/spa-github-pages
-      (function (l) {
-        if (l.search[1] === "/") {
-          var decoded = l.search
-            .slice(1)
-            .split("&")
-            .map(function (s) {
-              return s.replace(/~and~/g, "&");
-            })
-            .join("?");
-          window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash);
-        }
-      })(window.location);
-    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400..700&display=swap" rel="stylesheet" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script src="./src/main.tsx" type="module"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
