--- a/packages/main/index.html
+++ b/packages/main/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work in Progress</title>
+    <link href="/src/styles.css" rel="stylesheet" />
   </head>
   <body
     class="bg-gradient-to-r from-gray-800 via-gray-900 to-black text-gray-300 flex items-center justify-center min-h-screen"
